JumpScript/tests/baselines/reference/classPropertyAsProtected.errors.txt
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(3,19): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(4,19): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(8,26): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(9,26): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(15,3): error TS2445: Property 'x' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(16,3): error TS2445: Property 'y' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(17,3): error TS2445: Property 'y' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(18,3): error TS2445: Property 'foo' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(20,3): error TS2445: Property 'a' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(21,3): error TS2445: Property 'b' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(22,3): error TS2445: Property 'b' is protected and only accessible within class 'C' and its subclasses.
tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump(23,3): error TS2445: Property 'foo' is protected and only accessible within class 'C' and its subclasses.


==== tests/cases/conformance/classes/members/accessibility/classPropertyAsProtected.jump (12 errors) ====
    class C {
        protected x: string;
        protected get y() { return null; }
                      ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        protected set y(x) { }
                      ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        protected foo() { }
    
        protected static a: string;
        protected static get b() { return null; }
                             ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        protected static set b(x) { }
                             ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        protected static foo() { }
    }
    
    var c: C;
    // all errors
    c.x;
      ~
!!! error TS2445: Property 'x' is protected and only accessible within class 'C' and its subclasses.
    c.y;
      ~
!!! error TS2445: Property 'y' is protected and only accessible within class 'C' and its subclasses.
    c.y = 1;
      ~
!!! error TS2445: Property 'y' is protected and only accessible within class 'C' and its subclasses.
    c.foo();
      ~~~
!!! error TS2445: Property 'foo' is protected and only accessible within class 'C' and its subclasses.
    
    C.a;
      ~
!!! error TS2445: Property 'a' is protected and only accessible within class 'C' and its subclasses.
    C.b();
      ~
!!! error TS2445: Property 'b' is protected and only accessible within class 'C' and its subclasses.
    C.b = 1;
      ~
!!! error TS2445: Property 'b' is protected and only accessible within class 'C' and its subclasses.
    C.foo();
      ~~~
!!! error TS2445: Property 'foo' is protected and only accessible within class 'C' and its subclasses.